css/infoscreen.css
div, ul, img, iframe {
	margin: 0;
	padding: 0;
	margin: 0px;
	padding: 0px;
}
html{
  min-height: 100%;
}
body {
/*  position: absolute;
  left: 0;
  top: 0; */  
  font-family: "Helvetica";
	color: #444;
  min-height: 100%;
  overflow: hidden;
  overflow-x: hidden;
  overflow-y: hidden;
  -webkit-transform-style: preserve-3d;
}
#container{
  display: block;
}
#contentFrame{
  position: relative;
  top: 81px;
  left: 0px;
  border: none;
}
#contentFrame iframe{
  overflow: hidden;
  overflow-x: hidden;
  overflow-y: hidden;
  border: none;
  background-color: #fff;
  -webkit-transform-style: preserve-3d;
  -webkit-transform: translateZ(-1px);
  position: absolute;
  top: 0px;
  left: 0px;
}
#header{
  z-index: 100;
}
#header .title {
  font-size: 46px; 
  font-weight: 200;
  padding: 4px 0 0 8px;
  float: left;
  color: #008cca;
}
#logo {
  float: left;
  padding: 3px;
}
#logo img{
  height: 45px;
}
#bar{
  /* background-color: #008cca; */
  background-color: #eee;
  height: 30px;
  position: absolute;
  top: 51px;
  width: 100%;
}
#bar .nav{
  float: right;
}
#bar .nav .focus-grabber{
  border: none;
  position: absolute;
  top: -1000px;
  z-index: 0;
}


#bar .page{
  font-weight: bold;
  font-size: 20px; 
	float: left;
  padding: 6px 6px;
  letter-spacing: 3px;
  color: #666;
}
#bar .nav{
  margin: 5px 10px;
}
#bar button{
  height: 22px;
  line-height: 12px;
  font-size: 12px;
  padding: 3px 8px;
  margin-left: 2px;
}
#datetime{
  position: absolute;
  right: 10px;
  top: 4px;
}
#datetime .time {
  color: #999;
  font-size:53px; 
  float: left;
  margin-top: -4px;
  margin-right: 8px;
  text-align: right;
}
#datetime .time .sep{
  font-size: 32px;
  position: relative;
  display: inline-block;
  padding: 0 4px 0 1px;
  top: -7px;
}
#datetime .calendar{
  float: right;
  margin-top: 1px;
}
.calendar .day, .calendar .date{
  color: #999;
  right: 10px;
}
.calendar .day {
  font-size: 25px; 
  height: 24px;
}
.calendar .date {
  text-align: right;
  font-size:20px;
}

